tests/specs/run/error_syntax/error_syntax.js.out
error: Expected ',', got 'following'
    at [WILDCARD]/error_syntax.js:3:6
  |
3 | (the following is a syntax error  ^^ ! )
  |      ~~~~~~~~~
